chamber join page - fixing contrast issue on menulinks

--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -202,7 +202,7 @@ nav {
 
 div.nav-links-wrapper {
     align-content: center;
-    background-color: var(--accent1-color);
+    background-color: var(--light-silver);
     display: flex;
     justify-content: center;
     margin: 0;
@@ -233,7 +233,7 @@ div.nav-links-wrapper img {
     /* display: block; */
 
     content: '→';
-    color: #fff;
+    color: var(--accent1-color);
 
     /* background-color: var(--highlight); */
     /* text-decoration: underline; */
@@ -278,7 +278,7 @@ nav.menuLinks ul {
 nav.menuLinks ul li a {
     /* border: 1px dashed pink; */
     /* background-color: rgba(255, 255, 255, 0.1); */
-    color: white;
+    color: var(--accent1-color);
     display: block;
     padding: 0.75rem 2vw;
     text-decoration: none;
@@ -289,7 +289,8 @@ nav.menuLinks ul li a {
 
 
 .menuLinks li:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+    /* background-color: rgba(0, 0, 0, 0.2); */
+    background-color: #fff;
     /* Change background color on hover */
 
     transition: background-color 0.1s ease-in;
